--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -103,6 +103,8 @@
     <Content Include="Images\logo.png" />
     <Content Include="Images\logo_4.png" />
     <Content Include="Images\mntSkopje.png" />
+	<Content Include="Images\TKOM.jpg" />
+	<Content Include="Images\Ohrid.jpg" />
     <Content Include="Images\NarodenTeatarBitola.png" />
     <Content Include="Images\NarodenTeatarKumanovo.png" />
     <Content Include="Images\NarodenTeatarShtip.png" />
