--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -105,6 +105,9 @@
     <Content Include="Images\mntSkopje.png" />
 	<Content Include="Images\TKOM.jpg" />
 	<Content Include="Images\Ohrid.jpg" />
+	  <Content Include="Images\naroden.jpg" />
+	  <Content Include="Images\10.jpg" />
+	  <Content Include="Images\MKTT.jpg" />
     <Content Include="Images\NarodenTeatarBitola.png" />
     <Content Include="Images\NarodenTeatarKumanovo.png" />
     <Content Include="Images\NarodenTeatarShtip.png" />
